# LIDAR-RORAIMA

./: .gitignore  README.md  pyproject.toml  requirements.txt
benchmarks/: README.md  all_model_results.csv
benchmarks/canopy/: metrics.csv
benchmarks/landcover/: metrics.csv
configs/: landcover_class_map.json
docs/: kaggle_publish_runbook.md  notebook_index.md  project_overview.md
images/: README.md
notebooks/: 00_metadata_eda.ipynb  01_feature_engineering_shared.ipynb  10_canopy_baseline.ipynb  11_canopy_random_forest.ipynb  12_canopy_boosting.ipynb  13_canopy_ensemble.ipynb  20_landcover_baseline.ipynb  21_landcover_random_forest.ipynb  22_landcover_boosting.ipynb  23_landcover_ensemble.ipynb  90_portfolio_inference_showcase.ipynb
scripts/: build_features.py  build_manifest.py  build_story_plots.py  export_benchmarks.py  generate_notebooks.py  init_kaggle_kernels.py  kaggle_bulk_output.py  kaggle_bulk_push.py  kaggle_bulk_status.py  kaggle_pair_cycle.py  kaggle_utils.py  run_notebooks_local.py  train_all.py  train_model.py
src/lidar_roraima/: __init__.py  config.py  cv.py  ensemble.py  features.py  inference.py  manifest.py  models.py  registry.py  runtime.py  validation.py
subprojects/canopy-height/: README.md
subprojects/land-cover/: README.md
tests/: test_validation.py
